[gd_scene load_steps=2 format=3 uid="uid://dyo6n8ss2ft3b"]

[ext_resource type="Script" path="res://PopupDialogTemplate.gd" id="1_1r6eq"]

[node name="CanvasLayer" type="CanvasLayer"]

[node name="PopupDialogTemplate" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -250.0
offset_right = 200.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1r6eq")

[node name="LineEdit" type="LineEdit" parent="PopupDialogTemplate"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = 11.0
offset_bottom = 42.0
grow_horizontal = 2
grow_vertical = 2
expand_to_text_length = true

[node name="Label" type="Label" parent="PopupDialogTemplate"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -68.0
offset_bottom = -19.0
grow_horizontal = 2
grow_vertical = 2
text = "Answer this:
What is 1 + 1?"
horizontal_alignment = 1

[node name="CancelButton" type="Button" parent="PopupDialogTemplate"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 33.0
offset_top = -46.0
offset_right = 93.0
offset_bottom = -15.0
grow_vertical = 0
text = "Cancel"

[node name="OkButton" type="Button" parent="PopupDialogTemplate"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -46.0
offset_right = -37.0
offset_bottom = -15.0
grow_horizontal = 0
grow_vertical = 0
text = "Submit"

[connection signal="incorrect_answer" from="PopupDialogTemplate" to="PopupDialogTemplate" method="_on_incorrect_answer"]
[connection signal="pressed" from="PopupDialogTemplate/CancelButton" to="PopupDialogTemplate" method="_on_cancel_button_pressed"]
[connection signal="pressed" from="PopupDialogTemplate/OkButton" to="PopupDialogTemplate" method="_on_submit_button_pressed"]
[connection signal="pressed" from="PopupDialogTemplate/OkButton" to="PopupDialogTemplate" method="_on_ok_button_pressed"]
